--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,100 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+.container{
+	width: 1100px;
+	margin: 0 auto;
+}
+nav > a, .logo, 
+.banner-left, .banner-right, 
+.features, .about, 
+.services, .product, .vision{
+	display: inline-block;
+	vertical-align: top;
+}
+nav{
+	width: 100%;
+	height: 100px;
+	margin: 10px 0 60px 0;
+}
+.logo{
+	width: 230px;
+	margin-top: 25px;
+	margin-left: 110px;
+}
+nav > a{
+	height: 100px;
+	line-height: 100px;
+	margin-left: 80px;
+	color: #b7b7b7;
+	text-decoration: none;
+	font-size: 18px;
+}
+#first-link{
+	margin-left: 0;
+}
+.banner-left, .banner-right{
+	width: 548px;
+}
+h1{
+	font-size: 100px;
+	text-align: center;
+	margin-bottom: 0;
+}
+h2{
+	font-size: 22px;
+}
+p, address{
+	font-size: 20px;
+	line-height: 1.2;
+}
+.banner{
+	padding-bottom: 50px;
+}
+.main{
+	padding: 50px 0;
+	margin: 50px 0;
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+}
+.banner-left{
+	margin-left: 50px;
+	width: 498px;
+	margin-top: 70px;
+}
+.banner-right{
+	width: 548px;
+}
+.banner-right img{
+	margin-left: 78px;
+	width: 470px;
+}
+button{
+	width: 220px;
+	background: white;
+	border: 1px solid black;
+	padding: 4px 20px;
+	font-size: 22px;
+	margin-left: 130px;
+	font-family: 'Titillium Web', sans-serif;
+}
+.features, .about{
+	width: 548px;
+}
+.middle-img{
+	width: 100%;
+	margin: 40px 0;
+}
+.services, .product, .vision{
+	width: 364px;
+}
+.contact{
+	margin-bottom: 70px;
+}
+footer{
+	text-align: center;
+	margin-bottom: 140px;
+}
+footer p{
+	font-size: 17px;
+}
